added migrations and create db

--- a/ar_todos/Rakefile
+++ b/ar_todos/Rakefile
@@ -15,6 +15,13 @@ task "db:drop" do
   rm_f DB_PATH
 end
 
+desc "drop, create, migrate"
+task "db:reset" do
+  rm_f DB_PATH
+  touch DB_PATH
+  system "rake db:migrate"
+end
+
 desc "migrate the database (options: VERSION=x, VERBOSE=false, SCOPE=blog)."
 task "db:migrate" do
   ActiveRecord::Migrator.migrations_paths << File.dirname(__FILE__) + 'db/migrate'
@@ -37,6 +44,11 @@ end
 desc 'Start IRB with application environment loaded'
 task "console" do
   exec "irb -r./config/application"
+end
+
+desc 'Start sqlite3 with db'
+task "db:console" do
+  exec "sqlite3 #{DB_PATH}"
 end
 
 desc "Run the specs"
